Revert "Fix alignment of page-edit and page-infos in page header"
This reverts commit 3a6357ff28d4dd712c6e3c080e61427bb5be9c4a.

--- a/resources/stylesheets/component/common/pageheader.page-edit.less
+++ b/resources/stylesheets/component/common/pageheader.page-edit.less
@@ -1,40 +1,31 @@
 .bs-page-edit {
-	max-width: 48%;
-	width: 100%;
+	min-width: 15.625rem;
+	max-width: 50%;
 
 	& > ul {
-		width: 100%;
 		padding: 0;
 		margin: 0;
 		list-style-type: none;
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: flex-start;
+		display: inline-flex;
 
 		& > li {
-			max-width: 100%;
-			line-height: 1.1em;
-			margin-right: 0.3125em;
-			margin-bottom: 0.625rem;
-
-			& > ul {
-				padding-left: 0;
-				display: inline-flex;
-			}
+			height: max-content;
 		}
+
 	}
 
+	.bs-page-edit-elements {
+		display: inline-flex;
+		padding-left: 0;
+	}
+
+	.bs-page-edit-element-icon-col,
 	.bs-page-edit-element-text-col {
-		display: inline-block;
-		max-width: 97%;
-	}
-
-	.bs-page-edit-element-button-col {
 		display: inline-block;
 	}
 
 	.bs-page-last-edit {
-		line-height: 0.875em;
+		line-height: 0.875rem;
 		a {
 			color: @link-color;
 
@@ -48,8 +39,9 @@
 
 	.icon-info::before {
 		float: left;
-		padding-right: 0.3125em;
+		padding-right: 0.3125rem;
 		font-family: 'icomoon';
 		content: "\ea0c";
+		line-height: 1.1rem;
 	}
 }
